added validation + otp

--- a/views/admin/category-edit.ejs
+++ b/views/admin/category-edit.ejs
@@ -1,49 +1,29 @@
 <%- include('../partials/adminHeader') %>
 
-<main>
+<main> 
+    <form method="POST"  action="/admin/category-edit/<%= categories ? categories._id : '' %>">
+        <div class="space-y-12 p-20 flex">
+          <div class="border-b border-gray-900/10 pb-12">
+            <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
+              <div class="sm:col-span-3">
+                <label for="categoryName" class="block text-sm font-medium leading-6 text-gray-900">Product Name</label>
+                <div class="mt-2">
+                  <input value="<%= categories.categoryName %>"  type="text" name="categoryName" id="categoryName" autocomplete="given-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                </div>
+              </div>
 
-    <section class="w-full h-auto bg-blue-700 overflow-x-auto">
-        <div class="min-w-full">
-            <table class="min-w-full divide-y divide-gray-200">
-                <thead class="bg-pink-200">
-                    <tr>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider">Profile</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Name</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Email</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Phone</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Gender</th>
-                        <th scope="col" class="px-6 py-3 text-left text-xs font-medium text-gray-500 uppercase tracking-wider font-sans">Action</th>
-                    </tr>
-                </thead>
-                <tbody class="bg-white divide-y divide-gray-200">
-                    <% users.forEach(user => { %>
-                    <tr>
-                        <td class="px-6 py-4 whitespace-nowrap">
-                            <button class="text-indigo-600 hover:text-indigo-900 font-medium font-sans" >Profile</button>
-                        </td>
-                        <td class="px-6 py-4 whitespace-nowrap font-medium font-sans" ><%= user.name %></td>
-                        <td class="px-6 py-4 whitespace-nowrap font-medium font-sans"><%= user.email %></td>
-                        <td class="px-6 py-4 whitespace-nowrap font-medium font-sans"><%= user.phone %></td>
-                        <td class="px-6 py-4 whitespace-nowrap font-medium font-sans">Male</td>
-                        <td class="px-6 py-4">
-                            <a href="./user-delete/<%= user._id %>" class="font-medium text-red-950  hover:underline">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-4 h-4 text-red-600" >
-                                <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                              </svg>
-                              </a>
-                        </td>
-                    </tr>
-                    <% });%>
-
-                </tbody>
-            </table>
         </div>
-    </section>
-</main>
+      
+        <button type="submit" class="mt-5 inline-flex justify-center py-2 px-4 border border-transparent shadow-sm text-sm font-medium rounded-md text-white bg-yellow-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
+            Update 
+        </button>
+        </div>
+        </div>
+      </form>
+  </main>
 
 <script src="https://unpkg.com/@popperjs/core@2"></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="/OneCart/controllers/UserMangementConroller.js"></script>
 
 <script>
     // start: Sidebar
