--- a/views/admin/admin-login.ejs
+++ b/views/admin/admin-login.ejs
@@ -19,7 +19,7 @@
   </div>
 
   <div class="p-16 mt-10 sm:mx-auto sm:w-full sm:max-w-sm border-2 border-gray-300 bg-slate-100">
-    <form class="space-y-6" action="#" method="POST">
+    <form class="space-y-6" action="./admin-login" method="POST">
       <div>
         <label for="userName" class="block text-sm font-medium leading-6 text-gray-900">Username </label>
         <div class="mt-2">
