--- a/views/admin/product-add.ejs
+++ b/views/admin/product-add.ejs
@@ -14,7 +14,7 @@
               <div class="sm:col-span-3">
                 <label for="productImage" class="block text-sm font-medium leading-6 text-gray-900">Prouduct Image</label>
                 <div class="mt-2">
-                  <input type="file" name="productImage" id="productImage" accept="image/*" autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6">
+                  <input type="file" name="productImage" id="productImage" accept="image/*" muliple autocomplete="family-name" class="block w-full rounded-md border-0 py-1.5 text-gray-900 shadow-sm ring-1 ring-inset ring-gray-300 placeholder:text-gray-400 focus:ring-2 focus:ring-inset focus:ring-indigo-600 sm:text-sm sm:leading-6" >
                 </div>
               </div> 
 
