--- a/views/user/cart.ejs
+++ b/views/user/cart.ejs
@@ -1,8 +1,41 @@
+
 <%- include('../partials/header') %>
 
-<main>
+<section class="h-14 text-center mt-7 p-4">
+    <span class="michroma-regular">SEARCH</span>
+</section>
+<section class="mt-5">
+    <div class="bg-white flex">
+        <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8">
+            <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
+                <!-- First Product -->
+                <% products.forEach( x => { %>
+                   
+                <div class="group relative">
+                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
+                        <img src="./product_images/<%= x.productImage %>">
+                    </div>
+                    <div class="mt-4 flex justify-between">
+                        <div>
+                            <h3 class="text-sm text-gray-700">
+                                <a href="#">
+                                    <span aria-hidden="true" class="absolute inset-0"></span>
+                                    <%= x.productName %>
+                                </a>
+                            </h3>
+                            <p class="mt-1 text-sm text-gray-500"><%= x.color %></p>
+                        </div>
+                        <p class="text-sm font-medium text-gray-900"><%= x.price %></p>
+                       
+            </div>
+          
 
-<h1>YOUR CART</h1>
-</main>
+
+        </div>
+    
+        <% }) %>
+    </div>
+</section>
+
 
 <%- include('../partials/footer') %>
