--- a/views/user/login.ejs
+++ b/views/user/login.ejs
@@ -15,7 +15,7 @@
 <body>
 
   <% if (msg.length > 0)  { %>
-    <div id="flashMessage" style="background-color: #e31414c7; padding: 10px; font-family: 'Courier New', Courier, monospace;">
+    <div id="flashMessage" style="background-color: #f8d7da; text-align: center;  padding: 10px; font-family: 'Courier New', Courier, monospace;" class="mt-1">
         <%- msg %>
     </div>
     <script>
@@ -74,10 +74,6 @@
     </p>
   </div>
 
-
    </main>
-   
-   
-   
 </body>
 </html>
