--- a/views/admin/category-list.ejs
+++ b/views/admin/category-list.ejs
@@ -89,7 +89,7 @@
 
         </tbody>
     </table>
-    <section class="mt-14">
+    <section class="mb-14 mt-10">
         <a href="./category-add" type="submit" class="flex w-32   bg-rose-800 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-yellow-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Category</a>
 
     </section>
