--- a/views/admin/product-list.ejs
+++ b/views/admin/product-list.ejs
@@ -1,81 +1,77 @@
 <%- include('../partials/adminHeader') %>
 
-
-
-<main>
-
-<div class="relative overflow-x-auto shadow-md">
-
-    <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-        <thead class="text-xs text-gray-700 uppercase bg-blue-800  dark:text-gray-400">
-            <tr>
-                <th scope="col" class="p-1">
-                 
-                </th>
-                <th scope="col" class="px-6 3">Name</th>
-                <th scope="col" class="px-6 py-2">Stock</th>
-                <th scope="col" class="px-6 py-2">Brand</th>
-                <th scope="col" class="px-6 py-2">Color</th>
-                <th scope="col" class="px-6 py-2">Action</th>
-            </tr>
-        </thead>
-        <tbody>
-            <% products.forEach(product => { %>
-            <tr class="bg-white border-b  dark:border-gray-400 hover:bg-gray-50 ">
-           
-                <th scope="row" class="flex items-center px-6 py-1 text-gray-900 whitespace-nowrap dark:text-white">
-                    <img class="w-10 hll" src="/product_images/<%= product.productImage %>" alt="Jese image">
-                   
-                      
-                    <div class="ps-3">
-                        <a href="#" class="font-medium font-sans text-gray-950  hover:underline "><%= product.productName %>
-                         
-                          </a>
-                    </div>  
-                </th>
-            
-               
-                <td class="px-6 py-4">
-                    <a href="#" class="font-medium font-sans text-gray-950  hover:underline"><%= product.stock %>
-                       
-                      </a>
-                </td>
-                
-                <td class="px-6 py-4">
-                    <a class="font-medium font-sans text-gray-950  hover:underline"><%= product.brand %>
-                       
-                      </a>
-                </td>
-                <td class="px-6 py-4">
-                    <a href="#" class="font-medium font-sans text-gray-950  hover:underline"><%= product.color %>
-                       
-                      </a>
-                </td>
-                <td class="px-6 py-4">
-                    <a href="./product-delete/<%= product._id %>" class="font-medium font-sans text-gray-950  hover:underline">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3.5 h-3.5 text-red-600" >
-                        <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                      </svg>
-                      </a>
-                </td>
-                <td>
-                    <a href="./product-edit/<%= product._id %>" class="font-medium font-sans text-gray-950  hover:underline">
-                        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-3 h-3">
-                            <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
-                          </svg>
-                      </a>
-                </td>
-            </tr>
-            <% });%>
-
-        </tbody>
-    </table>
-    <section class="">
-        <a href="./product-add" type="submit" class="mt-5 flex w-32 bg-gray-400 px-3 py-1.5 text-sm font-semibold leading-6 text-white shadow-sm hover:bg-indigo-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Product</a>
-
-    </section>
-</div>
+<main class="p-4">
+    <div class="overflow-x-auto shadow-md">
+        <table class="w-full text-xs font-sans text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-700 uppercase bg-blue-800 dark:text-gray-400">
+                <tr>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Name</th>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Stock</th>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Brand</th>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Color</th>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Price</th>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Action</th>
+                    <th scope="col" class="px-4 md:px-6 py-3 md:py-4">Edit</th>
+                </tr>
+            </thead>
+            <tbody>
+                <% products.forEach(product => { %>
+                <tr class="bg-white border-b dark:border-gray-400 hover:bg-gray-50">
+                    <th scope="row" class="flex items-center px-4 md:px-6 py-2 md:py-4 text-gray-900 whitespace-nowrap dark:text-white">
+                        <img class="w-5 h-10 md:w-12 md:h-16" src="/product_images/<%= product.productImage %>" alt="Product Image">
+                        <div class="ps-3">
+                            <a href="#" class="font-medium font-sans text-gray-950 hover:underline"><%= product.productName %></a>
+                        </div>
+                    </th>
+                    <td class="px-4 md:px-6 py-4">
+                        <a href="#" class="font-medium font-sans text-gray-950 hover:underline"><%= product.stock %></a>
+                    </td>
+                    <td class="px-4 md:px-6 py-4">
+                        <a class="font-medium font-sans text-gray-950 hover:underline"><%= product.brand %></a>
+                    </td>
+                    <td class="px-4 md:px-6 py-4">
+                        <a href="#" class="font-medium font-sans text-gray-950 hover:underline"><%= product.color %></a>
+                    </td>
+                    <td class="px-4 md:px-6 py-4">
+                        <a href="#" class="font-medium font-sans text-gray-950 hover:underline"><%= product.price %></a>
+                    </td>
+                    <td class="px-4 md:px-6 py-4">
+                        <a href="./product-delete/<%= product._id %>" class="font-medium font-sans text-gray-950 hover:underline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5 text-red-600">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
+                            </svg>
+                        </a>
+                    </td>
+                    <td class="px-4 md:px-6 py-4">
+                        <a href="./product-edit/<%= product._id %>" class="font-medium font-sans text-gray-950 hover:underline">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="w-5 h-5">
+                                <path stroke-linecap="round" stroke-linejoin="round" d="m16.862 4.487 1.687-1.688a1.875 1.875 0 1 1 2.652 2.652L6.832 19.82a4.5 4.5 0 0 1-1.897 1.13l-2.685.8.8-2.685a4.5 4.5 0 0 1 1.13-1.897L16.863 4.487Zm0 0L19.5 7.125" />
+                            </svg>
+                        </a>
+                    </td>
+                </tr>
+                <% }); %>
+            </tbody>
+        </table>
+        <section class="text-center mt-5 mb-10 ">
+            <a href="./product-add" type="submit" class=" h-10 w-40 rounded-full inline-block  md:w-auto text-gray-900 bg-cyan-500 px-4 py-2 text-sm font-semibold leading-6 shadow-sm hover:bg-indigo-800 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Add Product</a>
+        </section>
+    </div>
 </main>
+
+
+
+
+<script src="https://unpkg.com/@popperjs/core@2"></script>
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+<script src="/OneCart/controllers/UserMangementConroller.js"></script>
+
+<script>
+    // Your JavaScript code remains the same
+</script>
+
+<%- include('../partials/adminFooter') %>
+
 
 
 
