--- a/views/user/wishlist.ejs
+++ b/views/user/wishlist.ejs
@@ -2,170 +2,32 @@
 <%- include('../partials/header') %>
 
 <section class="h-14 text-center mt-7 p-4">
-    <span class="michroma-regular">WISHLIST</span>
+    <span class="michroma-regular">SEARCH</span>
 </section>
-<section class="text-center font-mono">
-    <span>view your wishlist products</span>
-</section>
-
-<section class="mt-10">
+<section class="mt-5">
     <div class="bg-white flex">
         <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-1 lg:max-w-7xl lg:px-8">
             <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
                 <!-- First Product -->
+                <% products.forEach( x => { %>
                 <div class="group relative">
                     <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket-2.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
+                        <img src="./product_images/<%= x.productImage %>">
                     </div>
                     <div class="mt-4 flex justify-between">
                         <div>
                             <h3 class="text-sm text-gray-700">
                                 <a href="#">
                                     <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Basic Tee
+                                    <%= x.productName %>
                                 </a>
                             </h3>
-                            <p class="mt-1 text-sm text-gray-500">Black</p>
+                            <p class="mt-1 text-sm text-gray-500"><%= x.color %></p>
                         </div>
-                        <p class="text-sm font-medium text-gray-900">$35</p>
+                        <p class="text-sm font-medium text-gray-900"><%= x.price %></p>
                     </div>
                 </div>
-                <!-- Second Product -->
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/361349-125-2.jpg?v=1652080344&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Second Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Blue</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$45</p>
-                    </div>
-                </div>
-                <!-- Third Product -->
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/362700-51-2.jpg?v=1652080372&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Third Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Red</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$55</p>
-                    </div>
-                </div>
-         
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Third Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Red</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$55</p>
-                    </div>
-                </div>
-         
-            </div>
-        </div>
-    </div>
-</section>
-
-<section>
-    <div class="bg-white flex">
-        <div class="mx-auto max-w-2xl px-4 py-16 sm:px-6 sm:py-24 lg:max-w-7xl lg:px-8">
-            <div class="grid grid-cols-1 gap-x-6 gap-y-10 sm:grid-cols-2 lg:grid-cols-4 xl:gap-x-8">
-                <!-- First Product -->
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket-2.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Basic Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Black</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$35</p>
-                    </div>
-                </div>
-                <!-- Second Product -->
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/ragbo4535819dd2_q1_2-0_8fc35ffb-cb17-4bd0-8dba-1bf9c36588e8.jpg?v=1652168845&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Second Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Blue</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$45</p>
-                    </div>
-                </div>
-                <!-- Third Product -->
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Third Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Red</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$55</p>
-                    </div>
-                </div>
-                <div class="group relative">
-                    <div class="aspect-h-1 aspect-w-1 w-full overflow-hidden rounded-md bg-gray-200 lg:aspect-none group-hover:opacity-75 lg:h-80">
-                        <img src="https://cdn.shopify.com/s/files/1/0616/9480/4174/products/pink-jacket.jpg?v=1652079727&width=600" alt="Front of men&#039;s Basic Tee in black." class="h-full w-full object-cover object-center lg:h-full lg:w-full">
-                    </div>
-                    <div class="mt-4 flex justify-between">
-                        <div>
-                            <h3 class="text-sm text-gray-700">
-                                <a href="#">
-                                    <span aria-hidden="true" class="absolute inset-0"></span>
-                                    Third Tee
-                                </a>
-                            </h3>
-                            <p class="mt-1 text-sm text-gray-500">Red</p>
-                        </div>
-                        <p class="text-sm font-medium text-gray-900">$55</p>
-                    </div>
-                </div>
-         
+                <% }) %>
             </div>
         </div>
     </div>
